Testando para ver se esta funcionando

--- a/codigos_rodando/teste_balanco.ipynb
+++ b/codigos_rodando/teste_balanco.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tempo de execução da ação ABEV3: 0.02 minutos\n",
-      "Tempo de execução da ação AZUL4: 0.01 minutos\n",
-      "Tempo de execução da ação B3SA3: 0.02 minutos\n",
-      "Tempo de execução da ação BBAS3: 0.02 minutos\n",
-      "Tempo de execução da ação BBDC3: 0.02 minutos\n",
-      "Tempo de execução da ação BBDC4: 0.01 minutos\n",
-      "Tempo de execução da ação BBSE3: 0.02 minutos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
@@ -48,6 +34,36 @@
     "dados = scraper.rodar_acoes()\n",
     "\n",
     "dados.to_csv('../dados/setor.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('codigos_ibovespa.txt', 'r') as f:\n",
+    "    codigos_ibovespa = f.read().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "codigos_ibovespa[:100]"
    ]
   },
   {
@@ -163,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
